docs: add route browser/screenshot on swagger
